tests/baselines/reference/moduleNoneErrors(strict=true).errors.txt
a.ts(1,14): error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
a.ts(2,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.


==== a.ts (2 errors) ====
    export class Foo {
                 ~~~
!!! error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    